--- a/index.html
+++ b/index.html
@@ -4,14 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trivia</title>
+    <title>Vite + React</title>
   </head>
   <body>
-<<<<<<< HEAD
-    
-=======
-    <p>Trivia que ayudara a conocer sobre los diferentes intereses y aprender de el </p>
->>>>>>> eeb72b329408815a3257d734f8cf0b5ac5586c4a
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
